# tgfs_webplayer

./: .gitignore  README.md  __init__.py  pyproject.toml  routes.py
templates/: group.html  watch.html
